--- a/snow.html
+++ b/snow.html
@@ -12,11 +12,16 @@
             color: #fff;
         }
     </style>
-    
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+        <link rel="stylesheet" href="home.css">
+
 </head>
 <body>
-
+    <div class="navbar">
+        <a href="/">Home</a>
+        <a href="star.html">Star</a>
+        <a href="snow">Snow</a>
+        <a href="firefly.html">Firefly</a>
+    </div>
     <div id="root"></div>
     <script src="snow.js">
         
