--- a/star.html
+++ b/star.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>저 하늘의 별들은 당신을 위해</title>
+    <link rel="stylesheet" href="home.css">
+
     <style>
         body{
             margin: 0;
@@ -26,7 +28,12 @@
     </style>
 </head>
 <body>
-    
+    <div class="navbar">
+        <a href="/">Home</a>
+        <a href="star.html">Star</a>
+        <a href="snow">Snow</a>
+        <a href="firefly.html">Firefly</a>
+    </div>
     <div id="root">
         <div id="inRoot">star rain</div>
     </div>
