--- a/firefly.html
+++ b/firefly.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="home.css">
 
     <style>
         #root{
@@ -15,6 +16,12 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <a href="/">Home</a>
+        <a href="star.html">Star</a>
+        <a href="snow">Snow</a>
+        <a href="firefly.html">Firefly</a>
+    </div>
     <div id="root"></div>  
     <script src="firefly.js">
         
