--- a/snow.html
+++ b/snow.html
@@ -19,7 +19,7 @@
     <div class="navbar">
         <a href="/">Home</a>
         <a href="star.html">Star</a>
-        <a href="snow">Snow</a>
+        <a href="snow.html">Snow</a>
         <a href="firefly.html">Firefly</a>
     </div>
     <div id="root"></div>
