--- a/snow.html
+++ b/snow.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비가 오는 날</title>
+    <title>눈이 내리는 날</title>
     <style>
         #root{
             width: 100vw;
