--- a/snow.html
+++ b/snow.html
@@ -12,7 +12,7 @@
             color: #fff;
         }
     </style>
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="snow.css">
 
 </head>
 <body>
@@ -22,7 +22,7 @@
         <a href="snow.html">Snow</a>
         <a href="firefly.html">Firefly</a>
     </div>
-    <div id="root"></div>
+    <div id="root">start snow</div>
     <script src="snow.js">
         
     </script>
