--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <tr>
                 <td></td> <td>박어진</td> <td></td> <td>김지원</td> <td></td> <td>임윤진</td>
             </tr>
+            <tr>
+                <td></td> <td></td> <td></td> <td></td> <td></td> <td>출석부자리</td> <td>간식바</td>
+            </tr>
         </tbody>
     </table>
     </div>
