--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <td></td> <td>정영재(98)</td> <td></td> <td>김동필</td> <td>이화섭</td> <td>이재윤</td>
             </tr>
             <tr>
-                <td></td> <td>정석준</td> <td>송우림</td> <td>정유진</td> <td>곽은규</td> <td></td>
+                <td></td> <td>정석준</td> <td>송우림</td> <td>정유진</td> <td>곽은규</td> <td>유진호</td>
             </tr>
             <tr>
                 <td></td> <td>박어진</td> <td></td> <td>김지원</td> <td></td> <td>임윤진</td>
