--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <td></td> <td>정석준</td> <td>송우림</td> <td>정유진</td> <td>곽은규</td> <td>유진호</td>
             </tr>
             <tr>
-                <td></td> <td>박어진</td> <td></td> <td>김지원</td> <td></td> <td>임윤진</td>
+                <td></td> <td>박어진</td> <td></td> <td></td> <td></td> <td>임윤진</td>
             </tr>
             <tr>
                 <td></td> <td></td> <td></td> <td></td> <td></td> <td>출석부자리</td> <td>간식바</td>
