--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <!-- 5x6 테이블 생성 -->
             <!-- 첫 번째 행 -->
             <tr>
-                <td>박해준</td> <td>박재형</td> <td>이창덕</td> <td>정영재(99)</td> <td>이우석</td> <td></td>
+                <td>박해준</td> <td>박재형</td> <td>임윤진</td> <td>이재윤</td> <td>이우석</td><td></td>
             </tr>
             <tr>
-                <td></td> <td>정영재(98)</td> <td></td> <td>김동필</td> <td>이화섭</td> <td>이재윤</td>
+                <td>정석준</td> <td>정영재(99)</td> <td>송우림</td> <td>정유진</td> <td>이화섭</td> <td>김동필</td>
             </tr>
             <tr>
-                <td></td> <td>정석준</td> <td>송우림</td> <td>정유진</td> <td>곽은규</td> <td>유진호</td>
+                <td></td> <td>박어진</td> <td>정영재(98)</td> <td></td> <td>곽은규</td> <td>유진호</td>
             </tr>
             <tr>
-                <td></td> <td>박어진</td> <td></td> <td></td> <td></td> <td>임윤진</td>
+                <td></td> <td></td> <td></td> <td></td> <td></td> <td>ㅣ</td>
             </tr>
             <tr>
                 <td></td> <td></td> <td></td> <td></td> <td></td> <td>출석부자리</td> <td>간식바</td>
